test/functions/errors/unexpected_argument_type_3.dmd
function add(a: int64, b: int64): int64
    a + b

function add(a: )

print(add(3, 3.5))